Added PageInfo to the endpoints response
